# circleci-webhook-manager

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml
tests/: conftest.py  test_cli.py  test_client.py  test_models.py
webhook_manager/: __init__.py  __main__.py  cli.py  client.py  exceptions.py  models.py
